# MedInsight

./: .dockerignore  .env.demo.example  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  otel-collector-config.yml  pyproject.toml  requirements-docs.txt  requirements-nlp.txt  requirements.txt
.cursor/rules/: auto-commit-deploy.mdc
.github/workflows/: ci.yml  deploy.yml  docs-generate.yml
alembic/: env.py
alembic/versions/: 001_baseline.py  002_rls_tenant_isolation.py
app/: auth.py  config.py  database.py  main.py  models.py
app/bot/: __init__.py  main.py  models.py
app/core/: cache.py  database.py  metrics.py  redis.py  shutdown.py
app/db/: search.py  types.py
app/middleware/: audit.py  audit_append_only.py  audit_collector.py  cache_middleware.py  demo_readonly.py  logging.py  rate_limit.py  security_headers.py  tenant.py  usage_limit.py
app/models/: __init__.py  _legacy.py  _time.py  billing.py  dicom.py  patient.py  tenant.py  user.py
app/prompts/: __init__.py  clinical_prompts.py  dicom_prompts.py  medical_parser.py
app/routes/: admin.py  admin_backup.py  analytics.py  appointments.py  audit_export.py  cache_admin.py  dicom.py  dicom_annotation_common.py  dicom_annotations.py  dicom_annotations_edit.py  dicom_annotations_export.py  dicom_context.py  dicom_volume.py  dicom_zip.py  documents.py  docx_export.py  dsar.py  export.py  export_async.py  export_excel.py  fhir.py  fhir_export.py  fhir_import.py  health.py  patients.py  payments.py  predictions.py  preferences.py  reports.py  sso.py  telegram.py  templates.py  totp.py  users.py  webhooks.py  websocket.py
app/services/: access.py  ai_parser.py  ai_parser_validator.py  annotation_export.py  annotation_import.py  appointment_service.py  audit.py  audit_archive.py  audit_events.py  audit_exporter.py  audit_formatter.py  audit_retention.py  (+54 more)
docs/: README.md  index.en.md  index.md
scripts/: __init__.py  api_docs_config.py  backup.sh  cleanup_cache.py  docker_cleanup.sh  fix-vps-dns.sh  generate_api_docs.py  generate_demo_dicom.py  generate_encryption_key.py  init.py  migrate_to_postgres.py  nginx-medinsight.conf.example  remove-smdg.sh  restore.sh  run_alembic_migrate.py  seed_demo.py  seed_departments.py  setup-vps-ssh.sh  setup_swap.sh  start_celery_beat.sh  start_celery_worker.sh  sync_env_from_example.py  test_3d_render.py  test_ai_parser.py  test_annotation_export.py  test_annotations.py  test_appointments.py  test_backup.py  test_cache.py  test_dicom.py  test_dicom_context.py  test_dicom_zip.py  test_docx.py  test_email.py  test_export.py  test_fhir.py  test_health.sh  test_phase4.py  test_postgres.py  test_predict.py  (+9 more)
site/: 404.html  index.html  sitemap.xml
tests/: conftest.py  test_appointments.py  test_auth_refresh.py  test_auth_register.py  test_auth_reset.py  test_cache.py  test_dashboard.py  test_dicom_delete.py  test_docx_export.py  test_docx_generator.py  test_dsar.py  test_export_report.py  test_extractor.py  test_fhir_auth.py  test_fhir_mapper.py  test_login_lockout.py  test_mfa_policy.py  test_parser.py  test_password_policy.py  test_rbac.py  test_session_logout.py  test_siem_webhook.py  test_sso_status.py  test_static_cache.py  test_tenant_isolation.py  test_totp.py  test_usage_limit_tenant.py  test_websocket.py
traefik/: dynamic.yml
(+354 files in other folders)
