[tool.poetry]
name = "medinsight"
version = "1.0.0"
description = "Clinical analytics platform — document parsing, entity extraction, predictions, DICOM"
authors = ["MedInsight Team <dev@medinsight.local>"]
readme = "README.md"
repository = "https://github.com/valera7623/MedInsight"
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.115.6"
uvicorn = { version = ">=0.32.1", extras = ["standard"] }
sqlalchemy = ">=2.0.36"
psycopg2-binary = ">=2.9.10"
pydantic = { version = ">=2.13.0", extras = ["email"] }
email-validator = ">=2.2.0"
pydantic-settings = ">=2.14.0"
python-jose = { version = ">=3.3.0", extras = ["cryptography"] }
bcrypt = ">=4.0.1"
alembic = ">=1.13.0"
pyotp = ">=2.9.0"
python-multipart = ">=0.0.20"
python-docx = ">=1.1.2"
pypdf2 = ">=3.0.1"
reportlab = ">=4.2.5"
xhtml2pdf = ">=0.2.14"
aiofiles = ">=24.1.0"
celery = ">=5.3.0"
redis = ">=5.0.0"
boto3 = ">=1.35.0"
cryptography = ">=43.0.0"
openai = ">=1.0.0"
tenacity = ">=8.2.0"
pyrage = ">=1.2.0"
httpx = ">=0.27.0"
prometheus-client = ">=0.20.0"
aiosmtplib = ">=3.0.0"
structlog = ">=24.1.0"
jinja2 = ">=3.1.0"
openpyxl = ">=3.1.0"
opentelemetry-api = ">=1.28.0"
opentelemetry-sdk = ">=1.28.0"
opentelemetry-exporter-otlp = ">=1.28.0"
opentelemetry-semantic-conventions = ">=0.49b0"
opentelemetry-instrumentation-fastapi = ">=0.49b0"
opentelemetry-instrumentation-sqlalchemy = ">=0.49b0"
opentelemetry-instrumentation-redis = ">=0.49b0"
opentelemetry-instrumentation-celery = ">=0.49b0"
opentelemetry-instrumentation-requests = ">=0.49b0"
opentelemetry-instrumentation-httpx = ">=0.49b0"
websockets = ">=12.0"
aiogram = ">=3.29.0,<3.30"
pydicom = ">=2.4.0"
pillow = ">=10.0.0"
numpy = ">=1.26.0"
scipy = ">=1.11.0"
py7zr = ">=0.22.0"
fhir-resources = ">=7.1.0,<8.0.0"
stripe = ">=11.0.0"
yookassa = ">=3.5.0"
chromadb = ">=0.5.0"
scikit-learn = ">=1.4.0"
shap = ">=0.45.0"
joblib = ">=1.3.0"
xgboost = ">=2.0.0"
pandas = ">=2.1.0"
mkdocs = { version = ">=1.6.0", optional = true }
mkdocs-material = { version = ">=9.5.0", optional = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
ruff = ">=0.8.0"
mypy = ">=1.13.0"
black = ">=24.10.0"
isort = ">=5.13.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest-cov = ">=6.0.0"
pytest-asyncio = ">=0.24.0"
bandit = ">=1.8.0"
pip-audit = ">=2.7.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
mkdocs-mermaid2-plugin = ">=1.1.0"
mkdocs-static-i18n = ">=1.2.0"
pyyaml = ">=6.0"
requests = ">=2.31.0"

[tool.poetry.group.nlp]
optional = true

[tool.poetry.group.nlp.dependencies]
spacy = "3.8.2"

[tool.poetry.extras]
dicom = ["pydicom", "pillow"]
docs = ["mkdocs", "mkdocs-material"]

[tool.poetry.scripts]
medinsight-api = "app.main:main"
medinsight-celery = "app.tasks.celery_app:start_worker"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
